Removed maxpermsize
It was deprecated in the v8 JDK.